fixed cmake source list

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,5 +5,5 @@ message("Thank you for using Concoct!")
 file(GLOB SOURCES src/*.c)
 include_directories(include)
 add_custom_target(bindir ALL COMMAND ${CMAKE_COMMAND} -E make_directory bin)
-add_executable(concoct src/concoct.c)
+add_executable(concoct src/concoct.c src/concoct_lexer.c)
 set_target_properties(concoct PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
