--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,18 @@
 # Concoct CMake Configuration
-cmake_minimum_required(VERSION 2.8.12)
-project(concoct)
+cmake_minimum_required(VERSION 3.1.0)
+set(PROJECT concoct)
+project(${PROJECT})
 message("Thank you for using Concoct!")
-file(GLOB SOURCES src/*.c)
 include_directories(include)
-add_custom_target(bindir ALL COMMAND ${CMAKE_COMMAND} -E make_directory bin)
-add_executable(concoct src/concoct.c src/concoct_lexer.c)
-set_target_properties(concoct PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
+file(GLOB SOURCES src/*.c)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "bin")
+set(CMAKE_C_STANDARD 99)
+set(CMAKE_C_STANDARD_REQUIRED ON)
+
+if(MSVC)
+  set(CMAKE_C_FLAGS "/W4 /WX")
+else()
+  set(CMAKE_C_FLAGS "-Wall -Wextra -pedantic -Werror")
+endif()
+
+add_executable(${PROJECT} ${SOURCES})
