--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@
 *.pid
 *.core
 *.dylib
+build/
 bld/
 logs/
 doxygen/
@@ -21,3 +22,4 @@ cmake_install.cmake
 CMakeCache.txt
 CMakeFiles/
 Makefile
+.vscode/
