--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ set(CMAKE_C_STANDARD 99)
 set(CMAKE_C_STANDARD_REQUIRED ON)
 
 if(MSVC)
-  set(CMAKE_C_FLAGS "/W4 /WX")
+  set(CMAKE_C_FLAGS "/W4 /WX /D_CRT_SECURE_NO_WARNINGS")
 else()
   set(CMAKE_C_FLAGS "-Wall -Wextra -pedantic")
 endif()
