Add some preliminary VM stuff before crashing for the night

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ set(PROJECT concoct)
 project(${PROJECT})
 message("Thank you for using Concoct!")
 include_directories(include)
-file(GLOB SOURCES src/*.c)
+file(GLOB SOURCES src/*.c src/vm/*.c)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "bin")
 set(CMAKE_C_STANDARD 99)
 set(CMAKE_C_STANDARD_REQUIRED ON)
