--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,14 +1,7 @@
 version: 0.1.{build}
-image:
-  - Visual Studio 2015
-  - Visual Studio 2017
-  - Visual Studio 2019
-configuration:
-  - Debug
-  - Release
-platform:
-  - x86
-  - x64
+image: Visual Studio 2017
+configuration: Debug
+platform: Win64
 before_build:
   - mkdir build 
   - cd build
