Add macOS build support for Travis CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,23 +2,21 @@
 
 language: c
 
+os:
+  - linux
+  - osx
+
 compiler:
   - clang
   - gcc
 
-# Below is a workaround for the "unknown CMake command: target_include_directories" error.
-# This feature was added in more recent versions of CMake.
 sudo: false
-addons:
-  apt:
-    sources:
-      - george-edison55-precise-backports
-    packages:
-      - cmake
-      - cmake-data
 
 script:
-  - cmake . && make
+  - mkdir bld
+  - cd bld
+  - cmake ..
+  - make
 
 notifications:
   email: false
