Change store threshold to percentage
Closes #16.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,6 @@
 cmake_minimum_required(VERSION 3.1.0)
 set(PROJECT concoct)
 project(${PROJECT})
-message("Thank you for using Concoct!")
 include_directories(include)
 file(GLOB SOURCES src/*.c src/vm/*.c)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "bin")
@@ -18,3 +17,24 @@ endif()
 
 add_executable(${PROJECT} ${SOURCES})
 add_executable(objtest ${TEST_SOURCES})
+
+# Check for math library availability
+include(CheckFunctionExists)
+if(NOT ROUND_FUNCTION_EXISTS AND NOT NEED_LINKING_AGAINST_LIBM)
+	CHECK_FUNCTION_EXISTS(round ROUND_FUNCTION_EXISTS)
+	if(NOT ROUND_FUNCTION_EXISTS)
+		unset(ROUND_FUNCTION_EXISTS CACHE)
+		list(APPEND CMAKE_REQUIRED_LIBRARIES m)
+		CHECK_FUNCTION_EXISTS(round ROUND_FUNCTION_EXISTS)
+		if(ROUND_FUNCTION_EXISTS)
+			set(NEED_LINKING_AGAINST_LIBM True CACHE BOOL "" FORCE)
+		else()
+			message(FATAL_ERROR "round() function is not available!")
+		endif()
+	endif()
+endif()
+if(NEED_LINKING_AGAINST_LIBM)
+	target_link_libraries(${PROJECT} m)
+	target_link_libraries(objtest m)
+endif()
+message("Thank you for using Concoct!")
