Implement stack for VM and add tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,8 @@ file(GLOB SOURCES src/*.c src/vm/*.c)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "bin")
 set(CMAKE_C_STANDARD 99)
 set(CMAKE_C_STANDARD_REQUIRED ON)
-set(TEST_SOURCES src/debug.c src/memory.c src/types.c src/tests/objtest.c)
+set(OBJTEST_SOURCES src/debug.c src/memory.c src/types.c src/tests/objtest.c)
+set(STACKTEST_SOURCES src/debug.c src/memory.c src/types.c src/vm/stack.c src/tests/stacktest.c)
 
 if(MSVC)
 	set(CMAKE_C_FLAGS "/W4 /WX /D_CRT_SECURE_NO_WARNINGS")
@@ -16,7 +17,8 @@ else()
 endif()
 
 add_executable(${PROJECT} ${SOURCES})
-add_executable(objtest ${TEST_SOURCES})
+add_executable(objtest ${OBJTEST_SOURCES})
+add_executable(stacktest ${STACKTEST_SOURCES})
 
 # Check for math library availability
 include(CheckFunctionExists)
@@ -36,5 +38,6 @@ endif()
 if(NEED_LINKING_AGAINST_LIBM)
 	target_link_libraries(${PROJECT} m)
 	target_link_libraries(objtest m)
+	target_link_libraries(stacktest m)
 endif()
 message("Thank you for using Concoct!")
