Output version after AppVeyor build

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,6 +7,7 @@ build_script:
   - cmake --version
   - cmake .. -G "Visual Studio 15 2017"
   - cmake --build . --target concoct --config Debug
+  - bin\Debug\concoct.exe /v
 on_success:
   - ps: Invoke-RestMethod https://raw.githubusercontent.com/DiscordHooks/appveyor-discord-webhook/master/send.ps1 -o send.ps1
   - ps: ./send.ps1 success $env:WEBHOOK_URL
