--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 3.1.0)
 set(PROJECT concoct)
 set(OBJTEST objtest)
 set(STACKTEST stacktest)
+set(INTERPRETTEST interprettest)
 project(${PROJECT})
 include_directories(include)
 file(GLOB SOURCES src/*.c src/vm/*.c)
@@ -11,6 +12,7 @@ set(CMAKE_C_STANDARD 99)
 set(CMAKE_C_STANDARD_REQUIRED ON)
 set(OBJTEST_SOURCES src/debug.c src/memory.c src/types.c src/tests/objtest.c)
 set(STACKTEST_SOURCES src/debug.c src/memory.c src/types.c src/vm/instructions.c src/vm/stack.c src/tests/stacktest.c)
+set(INTERPRETTEST_SOURCES src/debug.c src/memory.c src/types.c src/vm/instructions.c src/vm/opcodes.c src/vm/stack.c src/vm/vm.c src/tests/interprettest.c)
 
 if(MSVC)
 	set(CMAKE_C_FLAGS "/W4 /WX /D_CRT_SECURE_NO_WARNINGS")
@@ -21,6 +23,7 @@ endif()
 add_executable(${PROJECT} ${SOURCES})
 add_executable(${OBJTEST} ${OBJTEST_SOURCES})
 add_executable(${STACKTEST} ${STACKTEST_SOURCES})
+add_executable(${INTERPRETTEST} ${INTERPRETTEST_SOURCES})
 
 # Set default build type
 if(NOT CMAKE_BUILD_TYPE)
@@ -60,6 +63,7 @@ if(NEED_LINKING_AGAINST_LIBM)
 	target_link_libraries(${PROJECT} m)
 	target_link_libraries(${OBJTEST} m)
 	target_link_libraries(${STACKTEST} m)
+    target_link_libraries(${INTERPRETTEST} m)
 endif()
 
 # Strip binary for release builds
@@ -67,6 +71,7 @@ if(CMAKE_BUILD_TYPE STREQUAL Release)
 	add_custom_command(TARGET ${PROJECT} POST_BUILD COMMAND ${CMAKE_STRIP} ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${PROJECT})
 	add_custom_command(TARGET ${OBJTEST} POST_BUILD COMMAND ${CMAKE_STRIP} ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${OBJTEST})
 	add_custom_command(TARGET ${STACKTEST} POST_BUILD COMMAND ${CMAKE_STRIP} ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${STACKTEST})
+    add_custom_command(TARGET ${INTERPRETTEST} POST_BUILD COMMAND ${CMAKE_STRIP} ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${INTERPRETTEST})
 endif()
 
 message("Thank you for using Concoct!")
