--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,9 +10,9 @@ file(GLOB SOURCES src/*.c src/vm/*.c)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "bin")
 set(CMAKE_C_STANDARD 99)
 set(CMAKE_C_STANDARD_REQUIRED ON)
-set(OBJTEST_SOURCES src/debug.c src/memory.c src/types.c src/tests/objtest.c)
-set(STACKTEST_SOURCES src/debug.c src/memory.c src/types.c src/vm/instructions.c src/vm/stack.c src/tests/stacktest.c)
-set(INTERPRETTEST_SOURCES src/debug.c src/memory.c src/types.c src/vm/instructions.c src/vm/opcodes.c src/vm/stack.c src/vm/vm.c src/tests/interprettest.c)
+set(OBJTEST_SOURCES src/debug.c src/memory.c src/seconds.c src/types.c src/tests/objtest.c)
+set(STACKTEST_SOURCES src/debug.c src/memory.c src/seconds.c src/types.c src/vm/instructions.c src/vm/stack.c src/tests/stacktest.c)
+set(INTERPRETTEST_SOURCES src/debug.c src/memory.c src/seconds.c src/types.c src/vm/instructions.c src/vm/opcodes.c src/vm/stack.c src/vm/vm.c src/tests/interprettest.c)
 
 if(MSVC)
 	set(CMAKE_C_FLAGS "/W4 /WX /D_CRT_SECURE_NO_WARNINGS")
