--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: CMake
       run: |
+        cd concoct
         mkdir bld
         cd bld
         cmake
