Combine Codecov and CodeQL

--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -1,6 +1,8 @@
-name: "CodeQL"
+name: "Code Analysis"
 
-on: [push, pull_request]
+on:
+  push:
+    branches: ["master"]
 
 jobs:
   analyze:
@@ -47,3 +49,8 @@ jobs:
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v2
+
+    - name: Upload coverage reports to Codecov
+      uses: codecov/codecov-action@v3
+      env:
+        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
