--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@ set(PROJECT concoct)
 set(OBJTEST objtest)
 set(STACKTEST stacktest)
 set(INTERPRETTEST interprettest)
+set(HASHMAPTEST hashmaptest)
+
 project(${PROJECT})
 include_directories(include)
 file(GLOB SOURCES src/*.c src/vm/*.c)
@@ -13,6 +15,7 @@ set(CMAKE_C_STANDARD_REQUIRED ON)
 set(OBJTEST_SOURCES src/debug.c src/memory.c src/seconds.c src/types.c src/tests/objtest.c)
 set(STACKTEST_SOURCES src/debug.c src/memory.c src/seconds.c src/types.c src/vm/instructions.c src/vm/stack.c src/tests/stacktest.c)
 set(INTERPRETTEST_SOURCES src/debug.c src/memory.c src/seconds.c src/types.c src/vm/instructions.c src/vm/opcodes.c src/vm/stack.c src/vm/vm.c src/tests/interprettest.c)
+set(HASHMAPTEST_SOURCES src/tests/hash_map_test.c src/hash_map.c)
 
 if(MSVC)
 	set(CMAKE_C_FLAGS "/W4 /WX /D_CRT_SECURE_NO_WARNINGS")
@@ -24,6 +27,7 @@ add_executable(${PROJECT} ${SOURCES})
 add_executable(${OBJTEST} ${OBJTEST_SOURCES})
 add_executable(${STACKTEST} ${STACKTEST_SOURCES})
 add_executable(${INTERPRETTEST} ${INTERPRETTEST_SOURCES})
+add_executable(${HASHMAPTEST} ${HASHMAPTEST_SOURCES})
 
 # Set default build type
 if(NOT CMAKE_BUILD_TYPE)
@@ -64,6 +68,7 @@ if(NEED_LINKING_AGAINST_LIBM)
 	target_link_libraries(${OBJTEST} m)
 	target_link_libraries(${STACKTEST} m)
     target_link_libraries(${INTERPRETTEST} m)
+	target_link_libraries(${HASHMAPTEST} m)
 endif()
 
 # Strip binary for release builds
@@ -72,6 +77,7 @@ if(CMAKE_BUILD_TYPE STREQUAL Release)
 	add_custom_command(TARGET ${OBJTEST} POST_BUILD COMMAND ${CMAKE_STRIP} ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${OBJTEST})
 	add_custom_command(TARGET ${STACKTEST} POST_BUILD COMMAND ${CMAKE_STRIP} ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${STACKTEST})
     add_custom_command(TARGET ${INTERPRETTEST} POST_BUILD COMMAND ${CMAKE_STRIP} ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${INTERPRETTEST})
+	add_custom_command(TARGET ${HASHMAPTEST} POST_BUILD COMMAND ${CMAKE_STRIP} ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${HASHMAPTEST})
 endif()
 
 message("Thank you for using Concoct!")
