Add debug print to hash map

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,7 @@ file(GLOB SOURCES src/*.c src/vm/*.c)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "bin")
 set(CMAKE_C_STANDARD 99)
 set(CMAKE_C_STANDARD_REQUIRED ON)
-set(HASH_MAP_TEST_SOURCES src/hash_map.c src/tests/hash_map_test.c)
+set(HASH_MAP_TEST_SOURCES src/debug.c src/hash_map.c src/seconds.c src/tests/hash_map_test.c)
 set(INTERPRET_TEST_SOURCES src/debug.c src/memory.c src/seconds.c src/types.c src/vm/instructions.c src/vm/opcodes.c src/vm/stack.c src/vm/vm.c src/tests/interpret_test.c)
 set(OBJECT_TEST_SOURCES src/debug.c src/memory.c src/seconds.c src/types.c src/tests/object_test.c)
 set(STACK_TEST_SOURCES src/debug.c src/memory.c src/seconds.c src/types.c src/vm/instructions.c src/vm/stack.c src/tests/stack_test.c)
