Add tab completion, hints, and history

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ set(STACK_TEST stack_test)
 set(INTERPRET_TEST interpret_test)
 set(UNIT_TESTS unit_tests)
 project(${PROJECT})
-include_directories(include)
+include_directories(include lib/linenoise)
 file(GLOB SOURCES src/*.c src/vm/*.c)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "bin")
 set(CMAKE_C_STANDARD 99)
@@ -26,6 +26,8 @@ if(MSVC)
 else()
   set(CMAKE_C_FLAGS "-Wall -Wextra -pedantic -O0")
 endif()
+
+add_library(linenoise STATIC lib/linenoise/linenoise.c lib/linenoise/linenoise.h)
 
 add_executable(${PROJECT} ${SOURCES})
 add_executable(${HASH_MAP_TEST} ${HASH_MAP_TEST_SOURCES})
@@ -67,7 +69,7 @@ if(NOT ROUND_FUNCTION_EXISTS AND NOT NEED_LINKING_AGAINST_LIBM)
   endif()
 endif()
 if(NEED_LINKING_AGAINST_LIBM)
-  target_link_libraries(${PROJECT} m)
+  target_link_libraries(${PROJECT} m linenoise)
   target_link_libraries(${HASH_MAP_TEST} m)
   target_link_libraries(${INTERPRET_TEST} m)
   target_link_libraries(${OBJECT_TEST} m)
