Prevent linking against linenoise library on Windows for now

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,7 +76,11 @@ if(NEED_LINKING_AGAINST_LIBM)
   target_link_libraries(${STACK_TEST} m)
   target_link_libraries(${UNIT_TESTS} m)
 else()
-  target_link_libraries(${PROJECT} linenoise)
+  if(WIN32)
+    target_link_libraries(${PROJECT})
+  else()
+    target_link_libraries(${PROJECT} linenoise)
+  endif()
   target_link_libraries(${HASH_MAP_TEST})
   target_link_libraries(${INTERPRET_TEST})
   target_link_libraries(${OBJECT_TEST})
