Fix Windows build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,9 @@ set(STACK_TEST stack_test)
 set(INTERPRET_TEST interpret_test)
 set(UNIT_TESTS unit_tests)
 project(${PROJECT})
-include_directories(include lib/linenoise)
+if(NOT WIN32)
+  include_directories(include lib/linenoise)
+endif()
 file(GLOB SOURCES src/*.c src/vm/*.c)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "bin")
 set(CMAKE_C_STANDARD 99)
@@ -27,7 +29,9 @@ else()
   set(CMAKE_C_FLAGS "-Wall -Wextra -pedantic -O0")
 endif()
 
-add_library(linenoise STATIC lib/linenoise/linenoise.c lib/linenoise/linenoise.h)
+if(NOT WIN32)
+  add_library(linenoise STATIC lib/linenoise/linenoise.c lib/linenoise/linenoise.h)
+endif()
 
 add_executable(${PROJECT} ${SOURCES})
 add_executable(${HASH_MAP_TEST} ${HASH_MAP_TEST_SOURCES})
