Fix CMake include path

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,9 @@ set(STACK_TEST stack_test)
 set(INTERPRET_TEST interpret_test)
 set(UNIT_TESTS unit_tests)
 project(${PROJECT})
-if(NOT WIN32)
+if(WIN32)
+  include_directories(include)
+else()
   include_directories(include lib/linenoise)
 endif()
 file(GLOB SOURCES src/*.c src/vm/*.c)
