--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,5 +1,5 @@
 blank_issues_enabled: false
 contact_links:
-  - name: Get support on Discord
-    url: https://discord.concoct.ist/
+  - name: Get support on Matrix
+    url: https://matrix.concoct.ist/
     about: Live chat support
